# cot

./: README.md  cot_text.txt
client/: package.json
client/src/: client.ts  crypto_utils.ts
proto/: mtacot.proto
server/: CMakeLists.txt
server/src/: crypto_utils.cpp  crypto_utils.h  main.cpp  server.cpp  server.h
